--- a/templates/500.html
+++ b/templates/500.html
@@ -52,6 +52,9 @@
       <a class="d-inline-block icon-link" href="https://linkedin.com/in/dixon-grossnickle" tabindex="0" target="_blank" rel="noopener" aria-label="LinkedIn profile">
          <i class="fab fa-linkedin contact-icon"></i>
       </a>
+      <a class="d-inline-block icon-link" href="https://github.com/dixongrossnickle" tabindex="0" target="_blank" rel="noopener" aria-label="LinkedIn profile">
+         <i class="fab fa-github contact-icon"></i>
+      </a>
    </div>
 </body>
 
