made some revisions

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,10 +60,10 @@
    <section id="tools">
       <div class="container-fluid header-container">
          <h2>
-            tools & technologies
+            languages | frameworks | libraries
          </h2>
          <p class="subtext">
-            Click the icons for more information about my programming experience.
+            Click the icons for more information about this site and my experience.
          </p>
          <div class="container-fluid icons-container" style="overflow: visible !important;">
             <div class="row">
@@ -94,25 +94,25 @@
          <div class="collapse" id="descrip1">
             <div class="card card-body tools-card">
                <h4 class="mb-3">Python</h4>
-               <p class="descrip">Python is the reason I built this site. It was the first language I learned, and I wanted to build an interface for Python programs I had written. The simulator uses the pandas library to analyze season statistics and FIFA ratings, and then chooses an outcome based on probability distributions.</p>
+               <p class="descrip">Python is the reason I built this site. It was the first language I learned, and I wanted to build an interface for a program I had written. The simulator uses Python to analyze season statistics and FIFA ratings, and then chooses an outcome based on probability distributions.</p>
             </div>
          </div>
          <div class="collapse" id="descrip2">
             <div class="card card-body tools-card">
                <h4 class="mb-3">Django</h4>
-               <p class="descrip">Django is the web framework that runs the site. I chose to learn Django because not only is it written in Python, it's also incredibly robust. This site uses only a fraction of Django's functionality — I just liked it a lot and wanted to get familiar with it.</p>
+               <p class="descrip">Django is the web framework that runs the site. I chose to learn Django because not only is it written in Python, it's also very powerful. This site uses only a fraction of Django's functionality — I just liked it a lot and wanted to get familiar with it.</p>
             </div>
          </div>
          <div class="collapse" id="descrip3">
             <div class="card card-body tools-card">
                <h4 class="mb-3">JavaScript</h4>
-               <p class="descrip">This site was my first introduction to JavaScript. At first, I just needed a few functions for the site to work. But once I got more comfortable with JavaScript, I decided to use a single Django view that would update without refreshing, which I accomplished with AJAX and jQuery.</p>
+               <p class="descrip">Building this website was my first time using JavaScript. At first, I just needed a few functions for the site to work. But now, it practically runs on JavaScript; the simulator uses it to send requests to the server, receive the results as JSON, and update the page.</p>
             </div>
          </div>
          <div class="collapse" id="descrip4">
             <div class="card card-body tools-card">
                <h4 class="mb-3">HTML/CSS</h4>
-               <p class="descrip">Using Twitter's Bootstrap library was a great introduction into HTML and CSS. It made designing a mobile-friendly, responsive layout much simpler, and some of Bootstrap's components were perfect for implementing my simulator.</p>
+               <p class="descrip">This was also my first introduction to HTML and CSS, but working with Bootstrap taught me a lot. It was much simpler to create a responsive layout than I imagined, and two components were all I needed for the simulator.</p>
             </div>
          </div>
       </div>
@@ -123,7 +123,7 @@
       <div class="container-fluid header-container">
          <h2>soccer match simulator</h2>
          <p class="subtext">
-            Simulate a match between any two teams from Europe's top five leagues (based on 2019-20 season results).
+            I'm a big soccer fan, so I made this. Simulate a match between any two teams from Europe's top five leagues (based on 2019-20 season results).
          </p>
       </div>
       <div class="container-fluid football-container">
