fixed a tiny mistake

--- a/templates/index.html
+++ b/templates/index.html
@@ -217,7 +217,7 @@
             <a class="d-inline-block icon-link" href="https://linkedin.com/in/dixon-grossnickle" tabindex="0" target="_blank" rel="noopener" aria-label="LinkedIn profile">
                <i class="fab fa-linkedin contact-icon"></i>
             </a>
-            <a class="d-inline-block icon-link" href="https://github.com/dixongrossnickle" tabindex="0" target="_blank" rel="noopener" aria-label="LinkedIn profile">
+            <a class="d-inline-block icon-link" href="https://github.com/dixongrossnickle" tabindex="0" target="_blank" rel="noopener" aria-label="GitHub profile">
                <i class="fab fa-github contact-icon"></i>
             </a>
          <div style="visibility:hidden; height:0; width:0;"><i class="fas fa-futbol"></i></div>
