--- a/templates/base.html
+++ b/templates/base.html
@@ -24,10 +24,10 @@
 
 <body>
    <div class="page-container">
-      <div class="container-fluid navbar-container">
+      <div class="container-fluid p-0">
          <nav class="navbar navbar-expand-lg navbar-light">
             <a href="{% url 'home' %}">
-               <h1 class="navbar-brand">dixon grossnickle</h1>
+               <h1 class="navbar-brand mb-0">dixon grossnickle</h1>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
             <p>This page won't work without JavaScript – make sure it's enabled in your browser settings.</p>
          </noscript>
       </div>
-      
+
       <div class="content-wrap">
          {% block content %}
 
