--- a/programs/templates/simulator.html
+++ b/programs/templates/simulator.html
@@ -25,7 +25,7 @@
                   <div class="row">
                      <div class="col-sm">
                         <div class="card select-card top-select-card">
-                           <div class="select-card-header text-center">
+                           <div class="card-header select-card-header text-center">
                               <h5 class="m-0">Home</h5>
                            </div>
                            <div class="card-body select-card-body">
@@ -43,7 +43,7 @@
                      </div>
                      <div class="col-sm">
                         <div class="card select-card">
-                           <div class="select-card-header text-center">
+                           <div class="card-header select-card-header text-center">
                               <h5 class="m-0">Away</h5>
                            </div>
                            <div class="card-body select-card-body">
@@ -67,7 +67,7 @@
             </div>
             <div class="carousel-item result-item">
                <div class="card results-card">
-                  <div class="results-card-header">
+                  <div class="card-header results-card-header">
                      <div class="row score-row">
                         <div class="col team1-name-col">
                            <h5 class="team1-name m-0"></h5>
