--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
    <meta charset="UTF-8" />
    <meta name="description" content="My personal website" />
@@ -11,11 +10,12 @@
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&family=Ubuntu:wght@500&display=swap" />
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
    <link rel="stylesheet" href="{% static 'css/styles.min.css' %}" />
+   {% block extra_styles %}{% endblock %}
    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
    <script defer src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
    <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
    <script defer src="{% static 'js/index.min.js' %}"></script>
-   {% block script %}{% endblock %}
+   {% block extra_scripts %}{% endblock %}
    <script defer src="https://kit.fontawesome.com/565e8772bc.js" crossorigin="anonymous"></script>
    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicons/apple-touch-icon.png' %}" />
    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicons/favicon-32x32.png' %}" />
@@ -23,7 +23,8 @@
 </head>
 
 <body>
-   <div class="page-container">
+   <div class="page-container position-relative">
+      <!-- Navbar -->
       <div class="container-fluid p-0">
          <nav class="navbar navbar-expand-lg navbar-light">
             <a href="{% url 'home' %}">
@@ -50,16 +51,17 @@
             <p>This page won't work without JavaScript – make sure it's enabled in your browser settings.</p>
          </noscript>
       </div>
-
       <div class="content-wrap">
-         {% block content %}
-
-         {% endblock %}
+         <div class="container">
+            <div class="row main-row justify-content-center">
+               {% block content %}{% endblock %}
+            </div>
+         </div>
+         {% block carousel %}{% endblock %}
       </div>
-
-      <!-- Footer Section -->
-      <section id="contact">
-         <div class="container-fluid footer-container">
+      <!-- Footer -->
+      <section id="contact" class="position-absolute w-100">
+         <div class="container-fluid footer-container text-center">
             <a id="email-btn-link" class="d-inline-block icon-link" role="button" tabindex="0" data-toggle="tooltip" data-container="body" title="Copy email address" aria-label="Copy email address to clipboard">
                <i class="far fa-envelope contact-icon"></i>
             </a>
@@ -73,7 +75,5 @@
          </div>
       </section>
    </div>
-
 </body>
-
 </html>
