--- a/programs/templates/simulator.html
+++ b/programs/templates/simulator.html
@@ -27,7 +27,7 @@
 <!-- Carousel -->
 {% block carousel %}
 <div class="container-fluid football-container p-0">
-   <div class="football-carousel carousel slide" data-interval="false" data-touch="false">
+   <div class="football-carousel carousel slide">
       <div class="carousel-inner">
          <div class="form-item carousel-item active">
             <form class="footballForm" method="GET" action="run/" data-url="{{ request.build_absolute_uri|safe }}">
