--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8" />
    <meta name="description" content="My personal website" />
@@ -62,13 +63,13 @@
       <!-- Footer -->
       <section id="contact" class="position-absolute w-100">
          <div class="container-fluid footer-container text-center">
-            <a id="email-btn-link" class="d-inline-block icon-link" role="button" tabindex="0" data-toggle="tooltip" data-container="body" title="Copy email address" aria-label="Copy email address to clipboard">
+            <a id="email-btn-link" class="d-inline-block icon-link" role="button" tabindex="0" aria-label="Copy email address to clipboard">
                <i class="far fa-envelope contact-icon"></i>
             </a>
-            <a class="d-inline-block icon-link" href="https://linkedin.com/in/dixon-grossnickle" tabindex="0" target="_blank" rel="noopener" aria-label="LinkedIn profile">
+            <a class="d-inline-block icon-link" href="https://linkedin.com/in/dixon-grossnickle" role="button" tabindex="0" aria-label="LinkedIn profile">
                <i class="fab fa-linkedin contact-icon"></i>
             </a>
-            <a class="d-inline-block icon-link" href="https://github.com/dixongrossnickle" tabindex="0" target="_blank" rel="noopener" aria-label="GitHub profile">
+            <a class="d-inline-block icon-link" href="https://github.com/dixongrossnickle" role="button" tabindex="0" aria-label="GitHub profile">
                <i class="fab fa-github contact-icon"></i>
             </a>
             <div style="visibility:hidden; height:0; width:0;"><i class="fas fa-futbol"></i></div>
@@ -76,4 +77,5 @@
       </section>
    </div>
 </body>
+
 </html>
