--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}<title>home | dixon grossnickle</title>{% endblock %}
-{% block extra_styles %}<link rel="stylesheet" href="{% static 'css/home.min.css' %}" />{% endblock %}
+{% block extra_styles %}<link rel="stylesheet" href="{% static 'css/home.css' %}" />{% endblock %}
 
 {% block content %}
 <div class="col-md-10 col-lg-8">
