fixed issue with match results on mobile screens

--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,9 @@
                {% block content %}{% endblock %}
             </div>
          </div>
-         {% block carousel %}{% endblock %}
+         <div class="container-fluid p-0">
+            {% block carousel %}{% endblock %}
+         </div>
       </div>
       
       <!-- Footer -->
